Added custom Login, Register and ForgotPassword pages Implement logic of Register page Added sessions Completed admin register form

--- a/Admin/src/main/resources/templates/login.html
+++ b/Admin/src/main/resources/templates/login.html
@@ -65,10 +65,10 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{/forgot-password.html}" href="forgot-password.html">Forgot Password?</a>
+                                        <a class="small" th:href="@{/forgot-password}" href="forgot-password.html">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{/register.html}" href="register.html">Create an Account!</a>
+                                        <a class="small" th:href="@{/register}" href="register.html">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
